--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ background-color: rgb(195, 168, 238);
 }
 
 .container {
-display: grid;
+display: flex;
 padding: 250px;
 border: 4px solid rgb(139, 57, 233);
 width: 100%x;
