--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ background-color: rgb(195, 168, 238);
 }
 
 .container {
-display: flex;
+display: grid;
 padding: 250px;
 border: 4px solid rgb(139, 57, 233);
 width: 100%x;
@@ -20,3 +20,11 @@ background-color:rgb(156, 176, 233);
 border: 3px solid black;
 }
 
+#questions{
+font-size: 30px;
+
+}
+
+.choice-text{
+    display: grid;
+}
